force-app/main/default/objects/Pricebook2/fields/AppAdmin_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>AppAdmin_Plan_Name__c</fullName>
    <label>AppAdmin Plan Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Premier</fullName>
                <default>true</default>
                <label>Premier</label>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>