force-app/main/default/objects/Pricebook2/fields/Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Type__c</fullName>
    <description>Used in Approval Process for approval routing.</description>
    <label>Approval Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager&gt;VP&gt;Deal Desk</fullName>
                <default>true</default>
                <label>Manager&gt;VP&gt;Deal Desk</label>
            </value>
            <value>
                <fullName>Deal Desk</fullName>
            </value>
            <value>
                <fullName>Manager&gt;VP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>