force-app/main/default/objects/Pricebook2/fields/Authorized_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Profiles__c</fullName>
    <label>Authorized Profiles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Development</fullName>
            </value>
            <value>
                <fullName>ADR Manager</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Client Engagement Manager</fullName>
            </value>
            <value>
                <fullName>Client Engagement Rep</fullName>
            </value>
            <value>
                <fullName>Client Success Profile</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Enterprise Sales</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Extended Sales</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>G and A</fullName>
            </value>
            <value>
                <fullName>Guest License User</fullName>
            </value>
            <value>
                <fullName>Healthgrades Contract Profile</fullName>
            </value>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Marketing User</fullName>
            </value>
            <value>
                <fullName>Marketing User SR</fullName>
            </value>
            <value>
                <fullName>Outside Sales</fullName>
            </value>
            <value>
                <fullName>Premier Support User</fullName>
            </value>
            <value>
                <fullName>Read Only</fullName>
            </value>
            <value>
                <fullName>Sales Administrator</fullName>
            </value>
            <value>
                <fullName>Sales Coordinator</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Sales VP</fullName>
            </value>
            <value>
                <fullName>Solutionreach Client Success Profile</fullName>
            </value>
            <value>
                <fullName>SR Contract Form Profile</fullName>
            </value>
            <value>
                <fullName>Standard Platform User</fullName>
            </value>
            <value>
                <fullName>Standard User</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Support Exec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>