force-app/main/default/objects/Pricebook2/fields/Authorized_Roles__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Roles__c</fullName>
    <label>Authorized Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>ADR Manager 1</fullName>
            </value>
            <value>
                <fullName>ADR Manager 2</fullName>
            </value>
            <value>
                <fullName>ADR Manager 3</fullName>
            </value>
            <value>
                <fullName>ADR Manager 4</fullName>
            </value>
            <value>
                <fullName>ADR Manager 5</fullName>
            </value>
            <value>
                <fullName>ADR Manager 6</fullName>
            </value>
            <value>
                <fullName>ADR Manager 8</fullName>
            </value>
            <value>
                <fullName>ADR Rep 1</fullName>
            </value>
            <value>
                <fullName>ADR Rep 2</fullName>
            </value>
            <value>
                <fullName>ADR Rep 3</fullName>
            </value>
            <value>
                <fullName>ADR Rep 4</fullName>
            </value>
            <value>
                <fullName>ADR Rep 5</fullName>
            </value>
            <value>
                <fullName>ADR Rep 6</fullName>
            </value>
            <value>
                <fullName>ADR Rep 7</fullName>
            </value>
            <value>
                <fullName>ADR Rep 8</fullName>
            </value>
            <value>
                <fullName>ADR Sr Manager</fullName>
            </value>
            <value>
                <fullName>AE Manager 1</fullName>
            </value>
            <value>
                <fullName>AE Manager 2</fullName>
            </value>
            <value>
                <fullName>AE Rep 1</fullName>
            </value>
            <value>
                <fullName>AE Rep 2</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Business Development Manager</fullName>
            </value>
            <value>
                <fullName>Controller</fullName>
            </value>
            <value>
                <fullName>CSR - Implementation</fullName>
            </value>
            <value>
                <fullName>CSR - Rapid Response</fullName>
            </value>
            <value>
                <fullName>CSR - Tech</fullName>
            </value>
            <value>
                <fullName>CSR - Tier 1</fullName>
            </value>
            <value>
                <fullName>CSR Director</fullName>
            </value>
            <value>
                <fullName>CSR Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>