force-app/main/default/objects/Pricebook2/fields/Contract_Start_Date_Offset__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date_Offset__c</fullName>
    <label>Contract Start Date Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>