force-app/main/default/objects/Pricebook2/fields/Deal_Desk_Orientation_Months__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Orientation_Months__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of Orientation Months allowed before going to Deal Desk</description>
    <label>Deal Desk Orientation Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>