force-app/main/default/objects/Pricebook2/fields/Default_Term__c.field-meta.xml
<CustomField>
    <fullName>Default_Term__c</fullName>
    <label>Default Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>