force-app/main/default/objects/Pricebook2/fields/Level_1_Limit_Term__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Limit_Term__c</fullName>
    <label>Level 1 Limit Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>