force-app/main/default/objects/Pricebook2/fields/Number_of_PRT_Included__c.field-meta.xml
<CustomField>
    <fullName>Number_of_PRT_Included__c</fullName>
    <label>Number of PRT Included</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>