force-app/main/default/objects/Pricebook2/fields/Playbook__c.field-meta.xml
<CustomField>
    <fullName>Playbook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Playbook to use with this Price Book</inlineHelpText>
    <label>Playbook</label>
    <referenceTo>Playbook__c</referenceTo>
    <relationshipLabel>Price Books</relationshipLabel>
    <relationshipName>Price_Books</relationshipName>
    <type>Lookup</type>
</CustomField>