force-app/main/default/objects/Pricebook2/fields/Sandbox_Migration_Id__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Migration_Id__c</fullName>
    <label>Sandbox Migration Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>