force-app/main/default/objects/Pricebook2/listViews/Active_Prices_Books.listView-meta.xml
<ListView>
    <fullName>Active_Prices_Books</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRICEBOOK2.IS_ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Prices Books</label>
</ListView>